changed feature bundle properties structure to conform to osgi style used since eclipse 3.5

--- a/de.guite.modulestudio.locales.feature/OSGI-INF/l10n/bundle.properties
+++ b/de.guite.modulestudio.locales.feature/OSGI-INF/l10n/bundle.properties
@@ -1,5 +1,4 @@
-
-# "featureName" property - name of the feature
+#Properties file for de.guite.modulestudio.locales.feature
 featureName=MOST Locales
 
 # "providerName" property - name of the company that provides the feature
