starting with structure for german locale fragments

--- a/de.guite.modulestudio.branding.nl1.de_DE/OSGI-INF/l10n/bundle_de_DE.properties
+++ b/de.guite.modulestudio.branding.nl1.de_DE/OSGI-INF/l10n/bundle_de_DE.properties
@@ -1,6 +1,7 @@
 #Properties file for de.guite.modulestudio.branding
 pluginName = ModuleStudio Branding Plug-in
 providerName = Guite - Guckelsberger Informationstechnik
+fragmentName = ModuleStudio Branding Locales Deutsch (Deutschland)
 
 product.name.ce = ModuleStudio CE
 product.description.ce = ModuleStudio Community Edition
