--- a/de.guite.modulestudio.logging.nl1.de_DE/OSGI-INF/l10n/bundle_de_DE.properties
+++ b/de.guite.modulestudio.logging.nl1.de_DE/OSGI-INF/l10n/bundle_de_DE.properties
@@ -1,4 +1,4 @@
 #Properties file for de.guite.modulestudio.logging
 pluginName=ModuleStudio Logging Plug-in
 providerName = Guite - Guckelsberger Informationstechnik
-fragmentName = ModuleStudio Logging Locales Deutsch
+fragmentName = ModuleStudio Logging Locales Deutsch (Deutschland)
