starting with structure for german locale fragments, refs #115

--- a/de.guite.modulestudio.branding.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/de.guite.modulestudio.branding.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -24,7 +24,7 @@ introDescriptionFirstSteps=Erste Schritte in ModuleStudio
 introDescriptionTutorials=Tutorials für verschiedene Funktionen
 introDescriptionSamples=Einige Beispiele für was MOST tun kann
 introDescriptionWhatsNew=Neuigkeiten rund um ModuleStudio
-introDescriptionMigrate=Import existierender Module
+introDescriptionMigrate=Migration oder Import existierender Module
 introDescriptionWebResources=Weitere Ressourcen im Web
 introCustomizationPreference.name=Willkommen-Anpassung
 
