--- a/de.guite.modulestudio.gmf.extmodel.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/de.guite.modulestudio.gmf.extmodel.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -1,4 +1,4 @@
 #Properties file for de.guite.modulestudio.gmf.extmodel
 pluginName = ModuleStudio Editor Extension Modell
 providerName = Guite - Guckelsberger Informationstechnik
-fragmentName = ModuleStudio Editor Modell Locales Deutsch
+fragmentName = ModuleStudio Editor Extension Modell Locales Deutsch
