--- a/org.zikula.modulestudio.generator.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/org.zikula.modulestudio.generator.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -1,4 +1,4 @@
 #Properties file for org.zikula.modulestudio.generator
 pluginName = ModuleStudio Generator Plug-in
-providerName = Guite - Guckelsberger Informationstechnik
+providerName = Zikula
 fragmentName = ModuleStudio Generator Locales Deutsch
