Raised version number to 0.5 beta

--- a/de.guite.modulestudio.branding.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/de.guite.modulestudio.branding.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -12,10 +12,10 @@ product.description.pe = ModuleStudio Professional Edition
 product.name.ee = ModuleStudio EE
 product.description.ee = ModuleStudio Enterprise Edition
 
-product.abouttext.ce = ModuleStudio Community Edition\nVersion: 0.4.10.\n\n\nCopyright (c) 2007-2010 Guckelsberger Informationstechnik
-product.abouttext.se = ModuleStudio Standard Edition\nVersion: 0.4.10.\n\n\nCopyright (c) 2007-2010 Guckelsberger Informationstechnik
-product.abouttext.pe = ModuleStudio Professional Edition\nVersion: 0.4.10.\n\n\nCopyright (c) 2007-2010 Guckelsberger Informationstechnik
-product.abouttext.ee = ModuleStudio Enterprise Edition\nVersion: 0.4.10.\n\n\nCopyright (c) 2007-2010 Guckelsberger Informationstechnik
+product.abouttext.ce = ModuleStudio Community Edition\nVersion: 0.5 beta.\n\n\nCopyright (c) 2007-2010 Guckelsberger Informationstechnik
+product.abouttext.se = ModuleStudio Standard Edition\nVersion: 0.5 beta.\n\n\nCopyright (c) 2007-2010 Guckelsberger Informationstechnik
+product.abouttext.pe = ModuleStudio Professional Edition\nVersion: 0.5 beta.\n\n\nCopyright (c) 2007-2010 Guckelsberger Informationstechnik
+product.abouttext.ee = ModuleStudio Enterprise Edition\nVersion: 0.5 beta.\n\n\nCopyright (c) 2007-2010 Guckelsberger Informationstechnik
 
 introTitle=Willkommen bei ModuleStudio
 introBrandingImageText=ModuleStudio
