--- a/de.guite.modulestudio.help.cheatsheets.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/de.guite.modulestudio.help.cheatsheets.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -18,22 +18,20 @@ cheatsheet.environment.name=Die Umgebung erkunden
 cheatsheet.environment.desc=Die Komponenten von ModuleStudio kennenlernen
 
 cheatsheet.editorstart.name=Ein Haupt-Modell erstellen
-cheatsheet.editorstart.desc=Dieses Cheatsheet hilft bei der Erstellung eines neuen Modells als Startpunkt für ein eigenes Modul.  \
+cheatsheet.editorstart.desc=Dieses Cheatsheet hilft bei der Erstellung eines neuen Modells als Startpunkt für eine eigene Anwendung.  \
 Es zeigt auch die grundlegenden visuellen Bausteine.
 
-cheatsheet.editorpers.name=Ein Persistenz-Modell erstellen
-cheatsheet.editorpers.desc=Dieses Cheatsheet hilft bei der Erstellung einer neuen Datenschicht im Modul.
-cheatsheet.editorproc.name=Ein Prozess-Modell erstellen
-cheatsheet.editorproc.desc=Dieses Cheatsheet hilft bei der Erstellung einer neuen Prozessschicht im Modul.
-cheatsheet.editorperm.name=Ein Berechtigungs-Modell erstellen
-cheatsheet.editorperm.desc=Dieses Cheatsheet hilft bei der Anpassung der Prozessschicht durch selbstdefinierte Berechtigungsschemata.
-cheatsheet.editorpres.name=Ein Präsentations-Modell erstellen
-cheatsheet.editorpres.desc=Dieses Cheatsheet hilft bei der Erstellung einer neuen Präsentationsschicht im Modul.
-cheatsheet.editorbehv.name=Ein Verhaltens-Modell erstellen
-cheatsheet.editorbehv.desc=Dieses Cheatsheet hilft bei der Erstellung einer neuen Verhaltensschicht im Modul.
+cheatsheet.editormodel.name=Models erstellen
+cheatsheet.editormodel.desc=Dieses Cheatsheet hilft bei der Erstellung einer neuen Model-Schicht in der Anwendung.
+cheatsheet.editorcontroller.name=Controller erstellen
+cheatsheet.editorcontroller.desc=Dieses Cheatsheet hilft bei der Erstellung einer neuen Controller-Schicht in der Anwendung.
+cheatsheet.editorpermission.name=Berechtigungen erstellen
+cheatsheet.editorpermission.desc=Dieses Cheatsheet hilft bei der Anpassung der Controller-Schicht durch selbstdefinierte Berechtigungsschemata.
+cheatsheet.editorview.name=Views erstellen
+cheatsheet.editorview.desc=Dieses Cheatsheet hilft bei der Erstellung einer neuen View-Schicht in der Anwendung.
 
-cheatsheet.generator.name=Ein Modul generieren
-cheatsheet.generator.desc=Dieses Cheatsheet hilft bei der Transformation des Modells in ein Modul.
+cheatsheet.generator.name=Eine Anwendung generieren
+cheatsheet.generator.desc=Dieses Cheatsheet hilft bei der Transformation des Modells in eine Anwendung.
 
 content-type.name.simpleCS=Einfache Cheatsheet-Datei
 content-type.name.compCS=Composite Cheatsheet-Datei
