started huge refactoring of DSL

--- a/de.guite.modulestudio.gmf.controller.nl1.de/messages_de.properties
+++ b/de.guite.modulestudio.gmf.controller.nl1.de/messages_de.properties
@@ -2,49 +2,49 @@
 # TODO: manually put keys and values
 CreateShortcutAction_OpenModelTitle=Zu referenzierendes Modell wählen
 CreateShortcutAction_WizardTitle=Shortcut erstellen
-ProcessingCreationWizardTitle="Neues "Prozess" Diagramm"
-ProcessingCreationWizard_DiagramModelFilePageTitle="Erstellung eines "Prozess" Diagramms"
-ProcessingCreationWizard_DiagramModelFilePageDescription=Datei für das Diagramm-Modell wählen.
+ControllerCreationWizardTitle="Neues "Controller" Diagramm"
+ControllerCreationWizard_DiagramModelFilePageTitle="Erstellung eines "Controller" Diagramms"
+ControllerCreationWizard_DiagramModelFilePageDescription=Datei für das Diagramm-Modell wählen.
 
-ProcessingCreationWizard_DomainModelFilePageTitle="Erstellung eines "Prozess" Domänen-Modells"
-ProcessingCreationWizard_DomainModelFilePageDescription="Datei für das Domänen-Modell wählen"
-ProcessingCreationWizardOpenEditorError="Fehler beim Öffnen des Diagramm-Editors"
-ProcessingCreationWizardCreationError="Probleme bei der Erstellung"
-ProcessingCreationWizardPageExtensionError="Der Dateiname sollte die Endung {0} haben."
-ProcessingDiagramEditorUtil_OpenModelResourceErrorDialogTitle=Fehler
-ProcessingDiagramEditorUtil_OpenModelResourceErrorDialogMessage=Konnte Modell-Datei {0} nicht laden
-ProcessingDiagramEditorUtil_CreateDiagramProgressTask=Erstelle Diagramm- und Modell-Dateien
-ProcessingDiagramEditorUtil_CreateDiagramCommandLabel=Erstelle Diagramm und Modell
-ProcessingDocumentProvider_isModifiable=Fehler beim Aktualisieren des Caches
-ProcessingDocumentProvider_handleElementContentChanged=Konnte die Hierarchie einer veränderten Ressource nicht auffrischen
-ProcessingDocumentProvider_IncorrectInputError={1}
-ProcessingDocumentProvider_NoDiagramInResourceError=Diagramm ist nicht präsent in der Ressource
-ProcessingDocumentProvider_DiagramLoadingError=Fehler beim Laden des Diagramms
-ProcessingDocumentProvider_UnsynchronizedFileSaveError=Die Datei wurde im Dateisystem verändert
-ProcessingDocumentProvider_SaveDiagramTask=Speichere Diagramm
-ProcessingDocumentProvider_SaveNextResourceTask=Speichere {0}
-ProcessingDocumentProvider_SaveAsOperation=Speichere {0} Diagramm als
+ControllerCreationWizard_DomainModelFilePageTitle="Erstellung eines "Controller" Domänen-Modells"
+ControllerCreationWizard_DomainModelFilePageDescription="Datei für das Domänen-Modell wählen"
+ControllerCreationWizardOpenEditorError="Fehler beim Öffnen des Diagramm-Editors"
+ControllerCreationWizardCreationError="Probleme bei der Erstellung"
+ControllerCreationWizardPageExtensionError="Der Dateiname sollte die Endung {0} haben."
+ControllerDiagramEditorUtil_OpenModelResourceErrorDialogTitle=Fehler
+ControllerDiagramEditorUtil_OpenModelResourceErrorDialogMessage=Konnte Modell-Datei {0} nicht laden
+ControllerDiagramEditorUtil_CreateDiagramProgressTask=Erstelle Diagramm- und Modell-Dateien
+ControllerDiagramEditorUtil_CreateDiagramCommandLabel=Erstelle Diagramm und Modell
+ControllerDocumentProvider_isModifiable=Fehler beim Aktualisieren des Caches
+ControllerDocumentProvider_handleElementContentChanged=Konnte die Hierarchie einer veränderten Ressource nicht auffrischen
+ControllerDocumentProvider_IncorrectInputError={1}
+ControllerDocumentProvider_NoDiagramInResourceError=Diagramm ist nicht präsent in der Ressource
+ControllerDocumentProvider_DiagramLoadingError=Fehler beim Laden des Diagramms
+ControllerDocumentProvider_UnsynchronizedFileSaveError=Die Datei wurde im Dateisystem verändert
+ControllerDocumentProvider_SaveDiagramTask=Speichere Diagramm
+ControllerDocumentProvider_SaveNextResourceTask=Speichere {0}
+ControllerDocumentProvider_SaveAsOperation=Speichere {0} Diagramm als
 InitDiagramFile_ResourceErrorDialogTitle=Fehler
 InitDiagramFile_ResourceErrorDialogMessage=Laden der Modell-Datei fehlgeschlagen
 InitDiagramFile_WizardTitle=Neue {0} Diagramm-Datei initialisieren
 InitDiagramFile_OpenModelFileDialogTitle=Domänen-Modell wählen
-ProcessingNewDiagramFileWizard_CreationPageName=Neue Diagramm-Datei initialisieren
-ProcessingNewDiagramFileWizard_CreationPageTitle=Diagramm-Datei
-ProcessingNewDiagramFileWizard_CreationPageDescription=Neues Diagramm basierend auf {0} Modell-Inhalt erstellen
-ProcessingNewDiagramFileWizard_RootSelectionPageName=Wurzel-Element des Diagramms wählen
-ProcessingNewDiagramFileWizard_RootSelectionPageTitle=Diagramm-Wurzel-Element
-ProcessingNewDiagramFileWizard_RootSelectionPageDescription=Semantisches Modell-Element zur Darstellung auf dem Diagramm wählen
-ProcessingNewDiagramFileWizard_RootSelectionPageSelectionTitle=Diagramm-Wurzel-Element wählen:
-ProcessingNewDiagramFileWizard_RootSelectionPageNoSelectionMessage=Diagramm-Wurzel-Element ist nicht ausgewählt
-ProcessingNewDiagramFileWizard_RootSelectionPageInvalidSelectionMessage=Ungültiges Diagramm-Wurzel-Element ist ausgewählt
-ProcessingNewDiagramFileWizard_InitDiagramCommand=Initialisiere Diagramm-Inhalte
-ProcessingNewDiagramFileWizard_IncorrectRootError=Nicht korrektes Modell-Objekt als Wurzel-Ressource-Objekt gespeichert
-ProcessingDiagramEditor_SavingDeletedFile=Die Original-Datei "{0}" wurde gelöscht.
-ProcessingDiagramEditor_SaveAsErrorTitle=Problem während Speichern Als...
-ProcessingDiagramEditor_SaveAsErrorMessage=Die Speicherung konnte nicht abgeschlossen werden. Die Zieldatei ist bereits in einem anderen Editor geöffnet.
-ProcessingDiagramEditor_SaveErrorTitle=Speicher-Probleme
-ProcessingDiagramEditor_SaveErrorMessage=Konnte Datei nicht speichern.
-ProcessingElementChooserDialog_SelectModelElementTitle=Modell-Element wählen
+ControllerNewDiagramFileWizard_CreationPageName=Neue Diagramm-Datei initialisieren
+ControllerNewDiagramFileWizard_CreationPageTitle=Diagramm-Datei
+ControllerNewDiagramFileWizard_CreationPageDescription=Neues Diagramm basierend auf {0} Modell-Inhalt erstellen
+ControllerNewDiagramFileWizard_RootSelectionPageName=Wurzel-Element des Diagramms wählen
+ControllerNewDiagramFileWizard_RootSelectionPageTitle=Diagramm-Wurzel-Element
+ControllerNewDiagramFileWizard_RootSelectionPageDescription=Semantisches Modell-Element zur Darstellung auf dem Diagramm wählen
+ControllerNewDiagramFileWizard_RootSelectionPageSelectionTitle=Diagramm-Wurzel-Element wählen:
+ControllerNewDiagramFileWizard_RootSelectionPageNoSelectionMessage=Diagramm-Wurzel-Element ist nicht ausgewählt
+ControllerNewDiagramFileWizard_RootSelectionPageInvalidSelectionMessage=Ungültiges Diagramm-Wurzel-Element ist ausgewählt
+ControllerNewDiagramFileWizard_InitDiagramCommand=Initialisiere Diagramm-Inhalte
+ControllerNewDiagramFileWizard_IncorrectRootError=Nicht korrektes Modell-Objekt als Wurzel-Ressource-Objekt gespeichert
+ControllerDiagramEditor_SavingDeletedFile=Die Original-Datei "{0}" wurde gelöscht.
+ControllerDiagramEditor_SaveAsErrorTitle=Problem während Speichern Als...
+ControllerDiagramEditor_SaveAsErrorMessage=Die Speicherung konnte nicht abgeschlossen werden. Die Zieldatei ist bereits in einem anderen Editor geöffnet.
+ControllerDiagramEditor_SaveErrorTitle=Speicher-Probleme
+ControllerDiagramEditor_SaveErrorMessage=Konnte Datei nicht speichern.
+ControllerElementChooserDialog_SelectModelElementTitle=Modell-Element wählen
 ShortcutCreationWizard_ReferencedElementSelectionPageName=Referenziertes Element wählen
 ShortcutCreationWizard_ReferencedElementSelectionPageTitle=Referenziertes Element
 ShortcutCreationWizard_ReferencedElementSelectionPageDescription=Wähle das Element, auf das sich der neue Shortcut bezieht.
@@ -137,5 +137,5 @@ CommandName_OpenDiagram=Diagramm öffnen
 AbstractParser_UnexpectedValueType=Wert vom Typ {0} wird erwartet
 AbstractParser_WrongStringConversion=String-Wert kann nicht in Wert {0} konvertiert werden
 AbstractParser_UnknownLiteral=Unbekanntes Literal: {0}
-ProcessingModelingAssistantProviderTitle=Wähle Domänen-Modell-Element
-ProcessingModelingAssistantProviderMessage=Verfügbare Domänen-Modell-Elemente:
+ControllerModelingAssistantProviderTitle=Wähle Domänen-Modell-Element
+ControllerModelingAssistantProviderMessage=Verfügbare Domänen-Modell-Elemente:
