--- a/de.guite.modulestudio.gmf.controller.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.gmf.controller.nl1.de/plugin_de.properties
@@ -1,21 +1,21 @@
 
-pluginName=ModuleStudio Prozess-Diagramm
+pluginName=ModuleStudio Controller-Diagramm
 providerName = Guite - Guckelsberger Informationstechnik
-fragmentName = ModuleStudio Prozess-Diagramm Locales Deutsch
+fragmentName = ModuleStudio Controller-Diagramm Locales Deutsch
 
-editorName=Prozess-Diagramm Editieren
-context.description=Prozess-Diagramm Editieren
-context.name=Im Prozess-Diagramm Editor
-newWizardName=Prozess-Diagramm
-newWizardDesc=Erstellt ein Prozess-Diagramm.
+editorName=Controller-Diagramm Editieren
+context.description=Controller-Diagramm Editieren
+context.name=Im Controller-Diagramm Editor
+newWizardName=Controller-Diagramm
+newWizardDesc=Erstellt ein Controller-Diagramm.
 
 
-perspectiveName=Prozess-Perspektive
-applicationActionSetLabel=<Prozess-Aktionen
+perspectiveName=Controller-Perspektive
+applicationActionSetLabel=<Controller-Aktionen
 
-navigatorContentName=*.msproc Diagramm-Inhalte
-update.diagram.name=Prozess-Diagramm aktualisieren
-update.diagram.description=Aktualisierung des Prozess-Diagramms durchführen
+navigatorContentName=*.mostcondiagram Diagramm-Inhalte
+update.diagram.name=Controller-Diagramm aktualisieren
+update.diagram.description=Aktualisierung des Controller-Diagramms durchführen
 
 
 # Property Sheet
@@ -24,15 +24,15 @@ tab.diagram=Lineale & Grid
 tab.domain=Daten
 
 # Preferences
-prefpage.de.guite.modulestudio.gmf.msproc.general=Prozess-Diagramm
-prefpage.de.guite.modulestudio.gmf.msproc.appearance=Darstellung
-prefpage.de.guite.modulestudio.gmf.msproc.connections=Verbindungen
-prefpage.de.guite.modulestudio.gmf.msproc.printing=Drucken
-prefpage.de.guite.modulestudio.gmf.msproc.rulersAndGrid=Lineale und Grid
+prefpage.de.guite.modulestudio.gmf.controller.general=Controller-Diagramm
+prefpage.de.guite.modulestudio.gmf.controller.appearance=Darstellung
+prefpage.de.guite.modulestudio.gmf.controller.connections=Verbindungen
+prefpage.de.guite.modulestudio.gmf.controller.printing=Drucken
+prefpage.de.guite.modulestudio.gmf.controller.rulersAndGrid=Lineale und Grid
 
 
 # Providers
-metatype.name.ProcessingContainer_1200=Processing
+metatype.name.ProcessingContainer_1200=Controller
 metatype.name.Processor_2201=AdminProcessor
 metatype.name.Processor_2202=UserProcessor
 metatype.name.Processor_2203=CustomRoleProcessor
