--- a/de.guite.modulestudio.gmf.main.nl1.de/messages_de.properties
+++ b/de.guite.modulestudio.gmf.main.nl1.de/messages_de.properties
@@ -2,11 +2,11 @@
 # TODO: manually put keys and values
 CreateShortcutAction_OpenModelTitle=Zu referenzierendes Modell wählen
 CreateShortcutAction_WizardTitle=Shortcut erstellen
-ModuleStudioCreationWizardTitle="Neues "Modul" Diagramm"
-ModuleStudioCreationWizard_DiagramModelFilePageTitle="Erstellung eines "Modul" Diagramms"
+ModuleStudioCreationWizardTitle="Neues "Anwendungs" Diagramm"
+ModuleStudioCreationWizard_DiagramModelFilePageTitle="Erstellung eines "Anwendungs" Diagramms"
 ModuleStudioCreationWizard_DiagramModelFilePageDescription=Datei für das Diagramm-Modell wählen.
 
-ModuleStudioCreationWizard_DomainModelFilePageTitle="Erstellung eines "Modul" Domänen-Modells"
+ModuleStudioCreationWizard_DomainModelFilePageTitle="Erstellung eines "Anwendungs" Domänen-Modells"
 ModuleStudioCreationWizard_DomainModelFilePageDescription="Datei für das Domänen-Modell wählen"
 ModuleStudioCreationWizardOpenEditorError="Fehler beim Öffnen des Diagramm-Editors"
 ModuleStudioCreationWizardCreationError="Probleme bei der Erstellung"
