--- a/de.guite.modulestudio.gmf.main.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.gmf.main.nl1.de/plugin_de.properties
@@ -1,29 +1,29 @@
 
-pluginName=ModuleStudio Modul-Diagramm
+pluginName=ModuleStudio Anwendungs-Diagramm
 providerName = Guite - Guckelsberger Informationstechnik
-fragmentName = ModuleStudio Modul-Diagramm Locales Deutsch
+fragmentName = ModuleStudio Anwendungs-Diagramm Locales Deutsch
 
-editorName=Modul-Diagramm Editieren
-context.description=Modul-Diagramm Editieren
-context.name=Im Modul-Diagramm Editor
-newWizardName=Modul-Diagramm
-newWizardDesc=Erstellt ein Modul-Diagramm.
+editorName=Anwendungs-Diagramm Editieren
+context.description=Anwendungs-Diagramm Editieren
+context.name=Im Anwendungs-Diagramm Editor
+newWizardName=Anwendungs-Diagramm
+newWizardDesc=Erstellt ein Anwendungs-Diagramm.
 
 initDiagramActionLabel=Diagramm-Datei initialisieren
 
-perspectiveName=Modul-Perspektive
-applicationActionSetLabel=<Modul-Aktionen
-newDiagramActionLabel=Modul-Diagramm
+perspectiveName=Anwendungs-Perspektive
+applicationActionSetLabel=<Anwendungs-Aktionen
+newDiagramActionLabel=Anwendungs-Diagramm
 websiteActionLabel=Homepage
-generateActionLabel=Modul generieren
+generateActionLabel=Anwendung generieren
 openURIActionLabel=URI öffnen...
 openURIActionDescription=Datei über URI öffnen
 openActionLabel=Öffnen...
 openActionDescription=Datei öffnen
 
-navigatorContentName=*.msmain Diagramm-Inhalte
-update.diagram.name=Modul-Diagramm aktualisieren
-update.diagram.description=Aktualisierung des Modul-Diagramms durchführen
+navigatorContentName=*.mostdiagram Diagramm-Inhalte
+update.diagram.name=Anwendungs-Diagramm aktualisieren
+update.diagram.description=Aktualisierung des Anwendungs-Diagramms durchführen
 
 
 # Property Sheet
@@ -32,11 +32,11 @@ tab.diagram=Lineale & Grid
 tab.domain=Daten
 
 # Preferences
-prefpage.de.guite.modulestudio.gmf.msmain.general=Modul-Diagramm
-prefpage.de.guite.modulestudio.gmf.msmain.appearance=Darstellung
-prefpage.de.guite.modulestudio.gmf.msmain.connections=Verbindungen
-prefpage.de.guite.modulestudio.gmf.msmain.printing=Drucken
-prefpage.de.guite.modulestudio.gmf.msmain.rulersAndGrid=Lineale und Grid
+prefpage.de.guite.modulestudio.gmf.main.general=Anwendungs-Diagramm
+prefpage.de.guite.modulestudio.gmf.main.appearance=Darstellung
+prefpage.de.guite.modulestudio.gmf.main.connections=Verbindungen
+prefpage.de.guite.modulestudio.gmf.main.printing=Drucken
+prefpage.de.guite.modulestudio.gmf.main.rulersAndGrid=Lineale und Grid
 
 
 # Providers
