--- a/de.guite.modulestudio.gmf.model.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/de.guite.modulestudio.gmf.model.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -1,4 +1,4 @@
 #Properties file for de.guite.modulestudio.gmf.mspers
-pluginName=ModuleStudio Persistenz-Diagramm
+pluginName=ModuleStudio Model-Diagramm
 providerName = Guite - Guckelsberger Informationstechnik
-fragmentName = ModuleStudio Persistenz-Diagramm Locales Deutsch
+fragmentName = ModuleStudio Model-Diagramm Locales Deutsch
