--- a/de.guite.modulestudio.gmf.model.nl1.de/messages_de.properties
+++ b/de.guite.modulestudio.gmf.model.nl1.de/messages_de.properties
@@ -2,49 +2,49 @@
 # TODO: manually put keys and values
 CreateShortcutAction_OpenModelTitle=Zu referenzierendes Modell wählen
 CreateShortcutAction_WizardTitle=Shortcut erstellen
-PersistenceCreationWizardTitle="Neues "Persistenz" Diagramm"
-PersistenceCreationWizard_DiagramModelFilePageTitle="Erstellung eines "Persistenz" Diagramms"
-PersistenceCreationWizard_DiagramModelFilePageDescription=Datei für das Diagramm-Modell wählen.
+ModelCreationWizardTitle="Neues "Model" Diagramm"
+ModelCreationWizard_DiagramModelFilePageTitle="Erstellung eines "Model" Diagramms"
+ModelCreationWizard_DiagramModelFilePageDescription=Datei für das Diagramm-Modell wählen.
 
-PersistenceCreationWizard_DomainModelFilePageTitle="Erstellung eines "Persistenz" Domänen-Modells"
-PersistenceCreationWizard_DomainModelFilePageDescription="Datei für das Domänen-Modell wählen"
-PersistenceCreationWizardOpenEditorError="Fehler beim Öffnen des Diagramm-Editors"
-PersistenceCreationWizardCreationError="Probleme bei der Erstellung"
-PersistenceCreationWizardPageExtensionError="Der Dateiname sollte die Endung {0} haben."
-PersistenceDiagramEditorUtil_OpenModelResourceErrorDialogTitle=Fehler
-PersistenceDiagramEditorUtil_OpenModelResourceErrorDialogMessage=Konnte Modell-Datei {0} nicht laden
-PersistenceDiagramEditorUtil_CreateDiagramProgressTask=Erstelle Diagramm- und Modell-Dateien
-PersistenceDiagramEditorUtil_CreateDiagramCommandLabel=Erstelle Diagramm und Modell
-PersistenceDocumentProvider_isModifiable=Fehler beim Aktualisieren des Caches
-PersistenceDocumentProvider_handleElementContentChanged=Konnte die Hierarchie einer veränderten Ressource nicht auffrischen
-PersistenceDocumentProvider_IncorrectInputError={1}
-PersistenceDocumentProvider_NoDiagramInResourceError=Diagramm ist nicht präsent in der Ressource
-PersistenceDocumentProvider_DiagramLoadingError=Fehler beim Laden des Diagramms
-PersistenceDocumentProvider_UnsynchronizedFileSaveError=Die Datei wurde im Dateisystem verändert
-PersistenceDocumentProvider_SaveDiagramTask=Speichere Diagramm
-PersistenceDocumentProvider_SaveNextResourceTask=Speichere {0}
-PersistenceDocumentProvider_SaveAsOperation=Speichere {0} Diagramm als
+ModelCreationWizard_DomainModelFilePageTitle="Erstellung eines "Model" Domänen-Modells"
+ModelCreationWizard_DomainModelFilePageDescription="Datei für das Domänen-Modell wählen"
+ModelCreationWizardOpenEditorError="Fehler beim Öffnen des Diagramm-Editors"
+ModelCreationWizardCreationError="Probleme bei der Erstellung"
+ModelCreationWizardPageExtensionError="Der Dateiname sollte die Endung {0} haben."
+ModelDiagramEditorUtil_OpenModelResourceErrorDialogTitle=Fehler
+ModelDiagramEditorUtil_OpenModelResourceErrorDialogMessage=Konnte Modell-Datei {0} nicht laden
+ModelDiagramEditorUtil_CreateDiagramProgressTask=Erstelle Diagramm- und Modell-Dateien
+ModelDiagramEditorUtil_CreateDiagramCommandLabel=Erstelle Diagramm und Modell
+ModelDocumentProvider_isModifiable=Fehler beim Aktualisieren des Caches
+ModelDocumentProvider_handleElementContentChanged=Konnte die Hierarchie einer veränderten Ressource nicht auffrischen
+ModelDocumentProvider_IncorrectInputError={1}
+ModelDocumentProvider_NoDiagramInResourceError=Diagramm ist nicht präsent in der Ressource
+ModelDocumentProvider_DiagramLoadingError=Fehler beim Laden des Diagramms
+ModelDocumentProvider_UnsynchronizedFileSaveError=Die Datei wurde im Dateisystem verändert
+ModelDocumentProvider_SaveDiagramTask=Speichere Diagramm
+ModelDocumentProvider_SaveNextResourceTask=Speichere {0}
+ModelDocumentProvider_SaveAsOperation=Speichere {0} Diagramm als
 InitDiagramFile_ResourceErrorDialogTitle=Fehler
 InitDiagramFile_ResourceErrorDialogMessage=Laden der Modell-Datei fehlgeschlagen
 InitDiagramFile_WizardTitle=Neue {0} Diagramm-Datei initialisieren
 InitDiagramFile_OpenModelFileDialogTitle=Domänen-Modell wählen
-PersistenceNewDiagramFileWizard_CreationPageName=Neue Diagramm-Datei initialisieren
-PersistenceNewDiagramFileWizard_CreationPageTitle=Diagramm-Datei
-PersistenceNewDiagramFileWizard_CreationPageDescription=Neues Diagramm basierend auf {0} Modell-Inhalt erstellen
-PersistenceNewDiagramFileWizard_RootSelectionPageName=Wurzel-Element des Diagramms wählen
-PersistenceNewDiagramFileWizard_RootSelectionPageTitle=Diagramm-Wurzel-Element
-PersistenceNewDiagramFileWizard_RootSelectionPageDescription=Semantisches Modell-Element zur Darstellung auf dem Diagramm wählen
-PersistenceNewDiagramFileWizard_RootSelectionPageSelectionTitle=Diagramm-Wurzel-Element wählen:
-PersistenceNewDiagramFileWizard_RootSelectionPageNoSelectionMessage=Diagramm-Wurzel-Element ist nicht ausgewählt
-PersistenceNewDiagramFileWizard_RootSelectionPageInvalidSelectionMessage=Ungültiges Diagramm-Wurzel-Element ist ausgewählt
-PersistenceNewDiagramFileWizard_InitDiagramCommand=Initialisiere Diagramm-Inhalte
-PersistenceNewDiagramFileWizard_IncorrectRootError=Nicht korrektes Modell-Objekt als Wurzel-Ressource-Objekt gespeichert
-PersistenceDiagramEditor_SavingDeletedFile=Die Original-Datei "{0}" wurde gelöscht.
-PersistenceDiagramEditor_SaveAsErrorTitle=Problem während Speichern Als...
-PersistenceDiagramEditor_SaveAsErrorMessage=Die Speicherung konnte nicht abgeschlossen werden. Die Zieldatei ist bereits in einem anderen Editor geöffnet.
-PersistenceDiagramEditor_SaveErrorTitle=Speicher-Probleme
-PersistenceDiagramEditor_SaveErrorMessage=Konnte Datei nicht speichern.
-PersistenceElementChooserDialog_SelectModelElementTitle=Modell-Element wählen
+ModelNewDiagramFileWizard_CreationPageName=Neue Diagramm-Datei initialisieren
+ModelNewDiagramFileWizard_CreationPageTitle=Diagramm-Datei
+ModelNewDiagramFileWizard_CreationPageDescription=Neues Diagramm basierend auf {0} Modell-Inhalt erstellen
+ModelNewDiagramFileWizard_RootSelectionPageName=Wurzel-Element des Diagramms wählen
+ModelNewDiagramFileWizard_RootSelectionPageTitle=Diagramm-Wurzel-Element
+ModelNewDiagramFileWizard_RootSelectionPageDescription=Semantisches Modell-Element zur Darstellung auf dem Diagramm wählen
+ModelNewDiagramFileWizard_RootSelectionPageSelectionTitle=Diagramm-Wurzel-Element wählen:
+ModelNewDiagramFileWizard_RootSelectionPageNoSelectionMessage=Diagramm-Wurzel-Element ist nicht ausgewählt
+ModelNewDiagramFileWizard_RootSelectionPageInvalidSelectionMessage=Ungültiges Diagramm-Wurzel-Element ist ausgewählt
+ModelNewDiagramFileWizard_InitDiagramCommand=Initialisiere Diagramm-Inhalte
+ModelNewDiagramFileWizard_IncorrectRootError=Nicht korrektes Modell-Objekt als Wurzel-Ressource-Objekt gespeichert
+ModelDiagramEditor_SavingDeletedFile=Die Original-Datei "{0}" wurde gelöscht.
+ModelDiagramEditor_SaveAsErrorTitle=Problem während Speichern Als...
+ModelDiagramEditor_SaveAsErrorMessage=Die Speicherung konnte nicht abgeschlossen werden. Die Zieldatei ist bereits in einem anderen Editor geöffnet.
+ModelDiagramEditor_SaveErrorTitle=Speicher-Probleme
+ModelDiagramEditor_SaveErrorMessage=Konnte Datei nicht speichern.
+ModelElementChooserDialog_SelectModelElementTitle=Modell-Element wählen
 ShortcutCreationWizard_ReferencedElementSelectionPageName=Referenziertes Element wählen
 ShortcutCreationWizard_ReferencedElementSelectionPageTitle=Referenziertes Element
 ShortcutCreationWizard_ReferencedElementSelectionPageDescription=Wähle das Element, auf das sich der neue Shortcut bezieht.
@@ -133,5 +133,5 @@ AbstractParser_WrongStringConversion=String-Wert kann nicht in Wert {0} konverti
 AbstractParser_UnknownLiteral=Unbekanntes Literal: {0}
 
 MessageFormatParser_InvalidInputError=Invalid input at {0}
-PersistenceModelingAssistantProviderTitle=Wähle Domänen-Modell-Element
-PersistenceModelingAssistantProviderMessage=Verfügbare Domänen-Modell-Elemente:
+ModelModelingAssistantProviderTitle=Wähle Domänen-Modell-Element
+ModelModelingAssistantProviderMessage=Verfügbare Domänen-Modell-Elemente:
