--- a/de.guite.modulestudio.gmf.model.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.gmf.model.nl1.de/plugin_de.properties
@@ -1,21 +1,21 @@
 
-pluginName=ModuleStudio Persistenz-Diagramm
+pluginName=ModuleStudio Model-Diagramm
 providerName = Guite - Guckelsberger Informationstechnik
-fragmentName = ModuleStudio Persistenz-Diagramm Locales Deutsch
+fragmentName = ModuleStudio Model-Diagramm Locales Deutsch
 
-editorName=Persistenz-Diagramm Editieren
-context.description=Persistenz-Diagramm Editieren
-context.name=Im Persistenz-Diagramm Editor
-newWizardName=Persistenz-Diagramm
-newWizardDesc=Erstellt ein Persistenz-Diagramm.
+editorName=Model-Diagramm Editieren
+context.description=Model-Diagramm Editieren
+context.name=Im Model-Diagramm Editor
+newWizardName=Model-Diagramm
+newWizardDesc=Erstellt ein Model-Diagramm.
 
 
-perspectiveName=Persistenz-Perspektive
-applicationActionSetLabel=<Persistenz-Aktionen
+perspectiveName=Model-Perspektive
+applicationActionSetLabel=<Model-Aktionen
 
-navigatorContentName=*.mspers Diagramm-Inhalte
-update.diagram.name=Persistenz-Diagramm aktualisieren
-update.diagram.description=Aktualisierung des Persistenz-Diagramms durchführen
+navigatorContentName=*.mostmoddiagram Diagramm-Inhalte
+update.diagram.name=Model-Diagramm aktualisieren
+update.diagram.description=Aktualisierung des Model-Diagramms durchführen
 
 
 # Property Sheet
@@ -24,15 +24,15 @@ tab.diagram=Lineale & Grid
 tab.domain=Daten
 
 # Preferences
-prefpage.de.guite.modulestudio.gmf.mspers.general=Persistenz-Diagramm
-prefpage.de.guite.modulestudio.gmf.mspers.appearance=Darstellung
-prefpage.de.guite.modulestudio.gmf.mspers.connections=Verbindungen
-prefpage.de.guite.modulestudio.gmf.mspers.printing=Drucken
-prefpage.de.guite.modulestudio.gmf.mspers.rulersAndGrid=Lineale und Grid
+prefpage.de.guite.modulestudio.gmf.model.general=Model-Diagramm
+prefpage.de.guite.modulestudio.gmf.model.appearance=Darstellung
+prefpage.de.guite.modulestudio.gmf.model.connections=Verbindungen
+prefpage.de.guite.modulestudio.gmf.model.printing=Drucken
+prefpage.de.guite.modulestudio.gmf.model.rulersAndGrid=Lineale und Grid
 
 
 # Providers
-metatype.name.PersistenceContainer_1100=Persistence
+metatype.name.ModelContainer_1100=Model
 metatype.name.Table_2101=Table
 metatype.name.ModVarContainer_2102=ModVars
 metatype.name.IntegerField_3101=Integer
