--- a/de.guite.modulestudio.gmf.controller.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/de.guite.modulestudio.gmf.controller.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -1,4 +1,4 @@
-#Properties file for de.guite.modulestudio.gmf.msproc
-pluginName=ModuleStudio Prozess-Diagramm
+#Properties file for de.guite.modulestudio.gmf.controller
+pluginName=ModuleStudio Controller-Diagramm
 providerName = Guite - Guckelsberger Informationstechnik
-fragmentName = ModuleStudio Prozess-Diagramm Locales Deutsch
+fragmentName = ModuleStudio Controller-Diagramm Locales Deutsch
