--- a/de.guite.modulestudio.gmf.main.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/de.guite.modulestudio.gmf.main.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -1,4 +1,4 @@
 #Properties file for de.guite.modulestudio.gmf.msmain
-pluginName=ModuleStudio Modul-Diagramm
+pluginName=ModuleStudio Anwendungs-Diagramm
 providerName = Guite - Guckelsberger Informationstechnik
-fragmentName = ModuleStudio Modul-Diagramm Locales Deutsch
+fragmentName = ModuleStudio Anwendungs-Diagramm Locales Deutsch
