started huge refactoring of DSL

--- a/de.guite.modulestudio.metamodel.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.nl1.de/plugin_de.properties
@@ -1,10 +1,4 @@
 # (c) 2007-2010 Guite - Guckelsberger Information Technology
 
 pluginName = ModuleStudio Model
-providerName = www.example.org
-
-_UI_ModuleStudio_content_type = ModuleStudio File
-_UI_Persistence_content_type = Persistence File
-_UI_Processing_content_type = Processing File
-_UI_Behavior_content_type = Behavior File
-_UI_Presentation_content_type = Presentation File
+providerName = Guite - Guckelsberger Informationstechnik
