started huge refactoring of DSL

--- a/de.guite.modulestudio.gmf.main.nl1.de/messages_de.properties
+++ b/de.guite.modulestudio.gmf.main.nl1.de/messages_de.properties
@@ -1,5 +1,4 @@
 
-# TODO: manually put keys and values
 CreateShortcutAction_OpenModelTitle=Zu referenzierendes Modell wählen
 CreateShortcutAction_WizardTitle=Shortcut erstellen
 ModuleStudioCreationWizardTitle="Neues "Anwendungs" Diagramm"
@@ -57,25 +56,21 @@ Container1Group_title=Container
 Container1Group_desc=Container-Elemente für Untereditoren
 Links2Group_title=Links
 Links2Group_desc=Abhängigkeits-Elemente
-Persistence1CreationTool_title=Persistenz
-Persistence1CreationTool_desc=Neuen Container zur Datenspeicherung erstellen
-Processing2CreationTool_title=Prozesse
-Processing2CreationTool_desc=Neuen Container für Pageflow-Prozessoren erstellen
-Behavior3CreationTool_title=Verhalten
-Behavior3CreationTool_desc=Neuen Container für Business-Logik erstellen
-Presentation4CreationTool_title=Präsentation
-Presentation4CreationTool_desc=Neuen Container für Präsentations-Elemente erstellen
-PersistenceDependency1CreationTool_title=Persistenz-Abhängigkeit
-PersistenceDependency1CreationTool_desc=Persistenz an Verhalten zuweisen
-BehaviorDependency2CreationTool_title=Verhaltens-Abhängigkeit
-BehaviorDependency2CreationTool_desc=Verhalten an Prozesse zuweisen
-PresentationDependency3CreationTool_title=Präsentations-Abhängigkeit
-PresentationDependency3CreationTool_desc=Präsentation an Prozesse zuweisen
+Model1CreationTool_title=Model
+Model1CreationTool_desc=Neuen Container zur Datenspeicherung erstellen
+Controller2CreationTool_title=Controller
+Controller2CreationTool_desc=Neuen Container für Pageflow-Controller erstellen
+View3CreationTool_title=View
+View3CreationTool_desc=Neuen Container für Präsentations-Elemente erstellen
+ModelDependency1CreationTool_title=Model-Abhängigkeit
+ModelDependency1CreationTool_desc=Model an Controller zuweisen
+ViewDependency2CreationTool_title=View-Abhängigkeit
+ViewDependency2CreationTool_desc=View an Controller zuweisen
 DiagramEditorActionBarAdvisor_DefaultFileEditorTitle=Fehler
 DiagramEditorActionBarAdvisor_DefaultFileEditorMessage=Es ist kein Editor registriert für die Datei "{0}"
 DiagramEditorActionBarAdvisor_DefaultEditorOpenErrorTitle=Offener Editor
 DiagramEditorActionBarAdvisor_AboutDialogTitle=Über
-DiagramEditorActionBarAdvisor_AboutDialogMessage=Modul-Diagramm Editor
+DiagramEditorActionBarAdvisor_AboutDialogMessage=Anwendungs-Diagramm Editor
 ApplicationMenuName_File=&Datei
 ApplicationMenuName_Edit=&Bearbeiten
 ApplicationMenuName_Window=&Fenster
