--- a/de.guite.modulestudio.gmf.main.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.gmf.main.nl1.de/plugin_de.properties
@@ -40,13 +40,9 @@ prefpage.de.guite.modulestudio.gmf.main.rulersAndGrid=Lineale und Grid
 
 
 # Providers
-metatype.name.Module_1000=Module
-metatype.name.PersistenceContainer_2001=Persistence
-metatype.name.ProcessingContainer_2002=Processing
-metatype.name.BehaviorContainer_2003=Behavior
-metatype.name.PresentationContainer_2004=Presentation
-metatype.name.BehaviorContainerDataSource_4001=Persistence Dependency
-metatype.name.ProcessingContainerBehaviorContext_4002=Behavior Dependency
-metatype.name.ProcessingContainerProcessViews_4003=Presentation Dependency
-
-
+metatype.name.Application_1000=Anwendung
+metatype.name.Models_2001=Model
+metatype.name.Controllers_2002=Controller
+metatype.name.Views_2003=View
+metatype.name.ControllersModelContext_4001=Model Abhängigkeit
+metatype.name.ControllersProcessViews_4002=View Abhängigkeit
